--- a/WebApplicationNew/Views/ManageUser/Index.cshtml
+++ b/WebApplicationNew/Views/ManageUser/Index.cshtml
@@ -8,19 +8,30 @@
 <html>
 <head>
 	<script src="~/Scripts/angular.js"></script>
+	<script src="~/Scripts/angular-route.js"></script>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 </head>
 <body>
-    <div ng-app="myApp" ng-controller="myCtrl">
-		<p>List users</p>
-		<ul>
-			<item-user></item-user>
-		</ul>
-		<form name="userForm">
-			<input type="email" name="email" ng-model="email" value=""/>  <input type="button" value="Add" ng-click="addUser()"/>
-		</form>
-		<span ng-show="userForm.email.$invalid">The email is invalid.</span>
+
+	
+
+    <div ng-app="myApp" >
+
+		<div ng-view=""></div>
+
+		<div ng-controller="myCtrl">
+			<p>List users</p>
+
+			<ul>
+				<item-user></item-user>
+			</ul>
+
+			<form name="userForm">
+				<input type="email" name="email" ng-model="email" value="" />  <input type="button" value="Add" ng-click="addUser()" />
+			</form>
+			<span ng-show="userForm.email.$invalid">The email is invalid.</span>
+		</div>
     </div>
 
 	<script src="~/Scripts/myScript/myScript.js"></script>
