fix $scope not update

--- a/WebApplicationNew/Views/ManageUser/Index.cshtml
+++ b/WebApplicationNew/Views/ManageUser/Index.cshtml
@@ -20,7 +20,7 @@
 
 		<div ng-view=""></div>
 
-		<div ng-controller="myCtrl">
+		<div ng-controller="myCtrl as $ctrl">
 			<p>List users</p>
 
 			<ul>
